--- a/crates/omni_configuration_discovery/project.omni.yaml
+++ b/crates/omni_configuration_discovery/project.omni.yaml
@@ -1,13 +1,9 @@
 # yaml-language-server: $schema=https://raw.githubusercontent.com/omni-oss/omni/refs/heads/json-schemas/project-latest.json
-name: omni_generator
+name: omnis_configuration_discovery
 
 extends:
   - "@workspace/omni/presets/rust-lib.omni.yaml"
 
 dependencies:
-  - omni_generator_configurations
-  - omni_file_data_serde
   - dir_walker
-  - omni_prompts
   - system_traits
-  - maps
