--- a/crates/omni_context/Cargo.toml
+++ b/crates/omni_context/Cargo.toml
@@ -50,6 +50,7 @@ omni_task_context = { workspace = true }
 omni_remote_cache_client = { workspace = true }
 omni_execution_plan = { workspace = true }
 omni_setup = { workspace = true }
+omni_configuration_discovery = { workspace = true }
 
 [dev-dependencies]
 tempfile = { workspace = true }
