--- a/crates/omni_configuration_discovery/Cargo.toml
+++ b/crates/omni_configuration_discovery/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "omni_generator"
+name = "omni_configuration_discovery"
 authors.workspace = true
 edition.workspace = true
 rust-version.workspace = true
@@ -23,15 +23,8 @@ eyre = { workspace = true }
 strum = { workspace = true }
 trace = { workspace = true }
 tracing = { workspace = true, optional = true }
-tera = { workspace = true }
 derive-new = { workspace = true }
-omni_generator_configurations = { workspace = true }
-omni_prompt = { workspace = true }
+derive_builder = { workspace = true }
 system_traits = { workspace = true }
-requestty = { workspace = true }
-value-bag = { workspace = true }
-maps = { workspace = true }
 dir_walker = { workspace = true }
-omni_configuration_discovery = { workspace = true }
-omni_file_data_serde = { workspace = true }
-tokio = { workspace = true }
+globset = { workspace = true }
