--- a/crates/omni_generator/project.omni.yaml
+++ b/crates/omni_generator/project.omni.yaml
@@ -7,7 +7,7 @@ extends:
 dependencies:
   - omni_generator_configurations
   - omni_file_data_serde
+  - omni_prompt
   - dir_walker
-  - omni_prompts
   - system_traits
   - maps
