fix: typo in dependency causing CI failure

--- a/crates/omni_generator/project.omni.yaml
+++ b/crates/omni_generator/project.omni.yaml
@@ -7,7 +7,7 @@ extends:
 dependencies:
   - omni_generator_configurations
   - omni_file_data_serde
-  - omni_prompts
+  - omni_prompt
   - omni_configuration_discovery
   - dir_walker
   - system_traits
