feat(omni_prompt): fix default value in template to support raw values

--- a/crates/omni_prompt/Cargo.toml
+++ b/crates/omni_prompt/Cargo.toml
@@ -35,3 +35,4 @@ schemars = { workspace = true }
 garde = { workspace = true }
 serde_validate = { workspace = true }
 omni_serde_validators = { workspace = true }
+either = { workspace = true }
