--- a/Cargo.toml
+++ b/Cargo.toml
@@ -72,7 +72,7 @@ clap_complete = { version = "^4.5.59" }
 globset = { version = "^0.4" }
 shadow-rs = { version = "^1.4.0", default-features = false }
 convert_case = { version = "^0.8.0" }
-schemars = { version = "^1.0.4", features = ["indexmap2"] }
+schemars = { version = "^1.1.0", features = ["indexmap2", "either1"] }
 walkdir = { version = "^2.5.0" }
 serde_norway = { version = "^0.9.42" }
 ignore = { version = "^0.4.24" }
