--- a/crates/omni_generator_configurations/Cargo.toml
+++ b/crates/omni_generator_configurations/Cargo.toml
@@ -34,3 +34,4 @@ system_traits = { workspace = true }
 lazy-regex = { workspace = true }
 omni_prompt = { workspace = true }
 omni_serde_validators = { workspace = true }
+serde_validate = { workspace = true }
