feat(omni_generators): add-inline implement prompting for missing target and expanding output path

--- a/crates/omni_serde_validators/Cargo.toml
+++ b/crates/omni_serde_validators/Cargo.toml
@@ -27,3 +27,5 @@ derive-new = { workspace = true }
 serde = { workspace = true }
 tera = { workspace = true }
 serde_validate = { workspace = true }
+maps = { workspace = true }
+sets = { workspace = true }
