fix(omni_prompt): values passed as pre exec are the wrong type

--- a/crates/omni_prompt/Cargo.toml
+++ b/crates/omni_prompt/Cargo.toml
@@ -36,3 +36,4 @@ garde = { workspace = true }
 serde_validate = { workspace = true }
 omni_serde_validators = { workspace = true }
 either = { workspace = true }
+serde_json = { workspace = true }
