--- a/Cargo.toml
+++ b/Cargo.toml
@@ -174,6 +174,8 @@ omni_scm = { path = "./crates/omni_scm" }
 omni_prompt = { path = "./crates/omni_prompt" }
 omni_serde_validators = { path = "./crates/omni_serde_validators" }
 omni_configuration_discovery = { path = "./crates/omni_configuration_discovery" }
+omni_discovery = { path = "./crates/omni_discovery" }
+omni_discovery_utils = { path = "./crates/omni_discovery_utils" }
 axum = { version = "^0.8.6", features = ["macros", "http2", "multipart"] }
 tower = { version = "^0.5.2" }
 tower-http = { version = "^0.6.6", features = ["trace", "catch-panic"] }
