--- a/crates/omni_discovery/Cargo.toml
+++ b/crates/omni_discovery/Cargo.toml
@@ -1,31 +1,26 @@
 [package]
-name = "omni_configuration_discovery"
-authors.workspace = true
-edition.workspace = true
+name = "omni_discovery"
 rust-version.workspace = true
+edition.workspace = true
+version.workspace = true
+authors.workspace = true
 repository.workspace = true
 
 [lib]
+name = "omni_discovery"
 path = "src/lib.rs"
-
-# [[bench]]
-# path = "./benches/omni_generator_benchmarks.rs"
-# name = "omni_generator_benchmarks"
-# harness = false
-
 [features]
 default = ["enable-tracing"]
-enable-tracing = ["trace/enabled", "dep:tracing"]
+enable-tracing = ["dep:tracing", "trace/enabled"]
 
 [dependencies]
-thiserror = { workspace = true }
 eyre = { workspace = true }
+thiserror = { workspace = true }
 strum = { workspace = true }
 trace = { workspace = true }
 tracing = { workspace = true, optional = true }
-derive-new = { workspace = true }
 derive_builder = { workspace = true }
-system_traits = { workspace = true }
+derive-new = { workspace = true }
 dir_walker = { workspace = true }
 globset = { workspace = true }
 omni_discovery_utils = { workspace = true }
