--- a/crates/omni_discovery/project.omni.yaml
+++ b/crates/omni_discovery/project.omni.yaml
@@ -1,10 +1,8 @@
 # yaml-language-server: $schema=https://raw.githubusercontent.com/omni-oss/omni/refs/heads/json-schemas/project-latest.json
-name: omni_configuration_discovery
-
+name: omni_discovery
 extends:
   - "@workspace/omni/presets/rust-lib.omni.yaml"
-
 dependencies:
-  - omni_discovery_utils
   - dir_walker
-  - system_traits
+  - omni_discovery_utils
+  - trace
