--- a/crates/omni_generator/project.omni.yaml
+++ b/crates/omni_generator/project.omni.yaml
@@ -9,6 +9,7 @@ dependencies:
   - omni_file_data_serde
   - omni_prompt
   - omni_configuration_discovery
+  - omni_discovery
   - dir_walker
   - system_traits
   - maps
