refactor(omni_generator): cleanup add-inline, add, and add-many handlers

--- a/generators/crate/generator.omni.yaml
+++ b/generators/crate/generator.omni.yaml
@@ -25,7 +25,9 @@ prompts:
       - condition: "{{ value | length > 0 }}"
         error_message: Crate name must not be empty
       - condition: "{{ value is matching('^[a-zA-Z_]{1}[a-zA-Z0-9_-]*$') }}"
-        error_message: Crate name must only contain alphanumeric characters, underscores, and hyphens, and must start with a letter
+        error_message: >
+          Crate name must only contain alphanumeric characters, underscores, and hyphens,
+          and must start with a letter
 
 actions:
   - type: add-many
@@ -38,3 +40,8 @@ actions:
     type: add
     template_file: files/src/main.rs.tpl
     base_path: files
+
+  - type: add-inline
+    template: |
+      target
+    output_path: .gitignore
