--- a/crates/omni_configurations/Cargo.toml
+++ b/crates/omni_configurations/Cargo.toml
@@ -33,3 +33,5 @@ js_runtime = { workspace = true }
 garde = { workspace = true }
 system_traits = { workspace = true }
 lazy-regex = { workspace = true }
+humantime = { workspace = true }
+humantime-serde = { workspace = true }
