--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -98,35 +98,27 @@ jobs:
       - name: Compress Binaries on Linux/macOS
         if: ${{ runner.os != 'Windows' && github.ref_type == 'tag' }}
         run: |
-          if [[ "${{ steps.determine.outputs.BUILD_OMNI }}" == "true" ]]; then
-            zip -j omni-${{ github.ref_name }}-${{ matrix.os }}.zip target/release/omni
-          fi
-          if [[ "${{ steps.determine.outputs.BUILD_ORCS }}" == "true" ]]; then
-            zip -j omni-remote-cache-service-${{ github.ref_name }}-${{ matrix.os }}.zip target/release/omni_remote_cache_service
-          fi
+          zip -j omni-${{ github.ref_name }}-${{ matrix.os }}.zip target/release/omni
+          zip -j omni-remote-cache-service-${{ github.ref_name }}-${{ matrix.os }}.zip target/release/omni_remote_cache_service
 
       - name: Compress Binaries on Windows
         if: ${{ runner.os == 'Windows' && github.ref_type == 'tag' }}
         run: |
           cd target/release
-          if ("${{ steps.determine.outputs.BUILD_OMNI }}" -eq "true") {
-            7z a ../../omni-${{ github.ref_name }}-${{ matrix.os }}.zip omni.exe
-          }
-          if ("${{ steps.determine.outputs.BUILD_ORCS }}" -eq "true") {
-            7z a ../../omni-remote-cache-service-${{ github.ref_name }}-${{ matrix.os }}.zip omni_remote_cache_service.exe
-          }
+          7z a ../../omni-${{ github.ref_name }}-${{ matrix.os }}.zip omni.exe
+          7z a ../../omni-remote-cache-service-${{ github.ref_name }}-${{ matrix.os }}.zip omni_remote_cache_service.exe
         shell: pwsh
 
       - name: Upload Omni Compressed Binary
         uses: actions/upload-artifact@v4
-        if: ${{ github.ref_type == 'tag' && steps.determine.outputs.BUILD_OMNI == 'true' }}
+        if: ${{ github.ref_type == 'tag' }}
         with:
           name: omni-${{ github.ref_name }}-${{ matrix.os }}
           path: omni-${{ github.ref_name }}-${{ matrix.os }}.zip
 
       - name: Upload Omni Remote Cache Service Compressed Binary
         uses: actions/upload-artifact@v4
-        if: ${{ github.ref_type == 'tag' && steps.determine.outputs.BUILD_ORCS == 'true' }}
+        if: ${{ github.ref_type == 'tag' }}
         with:
           name: omni-remote-cache-service-${{ github.ref_name }}-${{ matrix.os }}
           path: omni-remote-cache-service-${{ github.ref_name }}-${{ matrix.os }}.zip
