--- a/apps/site/package.json
+++ b/apps/site/package.json
@@ -27,13 +27,14 @@
         "react-dom": "^19.2.0",
         "tailwind-merge": "^3.4.0",
         "vite": "^7.2.2",
+        "nitro": "^3.0.1-alpha.1",
         "zod": "^4.1.12"
     },
     "devDependencies": {
         "@commander-js/extra-typings": "14.0.0",
         "@tailwindcss/vite": "^4.1.17",
-        "@types/node": "^24.10.0",
-        "@types/react": "^19.2.2",
+        "@types/node": "^24.10.1",
+        "@types/react": "^19.2.3",
         "@types/react-dom": "^19.2.2",
         "@vitejs/plugin-react": "^5.1.0",
         "tailwindcss": "^4.1.17",
