--- a/tests/omni-remote-cache-service-tests/project.omni.yaml
+++ b/tests/omni-remote-cache-service-tests/project.omni.yaml
@@ -10,7 +10,7 @@ tasks:
 
   test:api:
     command: bun x vitest --config ./vitest.config.api.ts run
-    retry: 3
+    max_retries: 3
     retry_interval: 2s
     dependencies:
       - omni_remote_cache_service#build
