--- a/crates/omni_prompt/Cargo.toml
+++ b/crates/omni_prompt/Cargo.toml
@@ -37,3 +37,4 @@ serde_validate = { workspace = true }
 omni_serde_validators = { workspace = true }
 either = { workspace = true }
 serde_json = { workspace = true }
+omni_tera = { workspace = true }
