--- a/crates/omni_generator/Cargo.toml
+++ b/crates/omni_generator/Cargo.toml
@@ -45,3 +45,5 @@ tokio = { workspace = true }
 path-clean = { workspace = true }
 async-trait = { workspace = true }
 either = { workspace = true }
+serde_json = { workspace = true }
+omni_tera = { workspace = true }
