--- a/crates/omni_generator_configurations/Cargo.toml
+++ b/crates/omni_generator_configurations/Cargo.toml
@@ -35,3 +35,4 @@ lazy-regex = { workspace = true }
 omni_prompt = { workspace = true }
 omni_serde_validators = { workspace = true }
 serde_validate = { workspace = true }
+value-bag = { workspace = true }
