--- a/generators/crate/generator.omni.yaml
+++ b/generators/crate/generator.omni.yaml
@@ -37,6 +37,7 @@ prompts:
 actions:
   - type: add-many
     base_path: templates
+    flatten: true
     template_files:
       - templates/**
       - "!templates/src/main.rs.tpl"
