--- a/generators/rust-error/generator.omni.yaml
+++ b/generators/rust-error/generator.omni.yaml
@@ -11,6 +11,9 @@ prompts:
 targets:
   root: .
 
+vars:
+  rust_error_name: "{{ prompts.error_name | upper_camel_case }}"
+
 actions:
   - type: add
     base_path: templates
