feat: support data context to add-* actions

--- a/generators/rust-error/generator.omni.yaml
+++ b/generators/rust-error/generator.omni.yaml
@@ -11,11 +11,10 @@ prompts:
 targets:
   root: .
 
-vars:
-  rust_error_name: "{{ prompts.error_name | upper_camel_case }}"
-
 actions:
   - type: add
     base_path: templates
     target: root
+    data:
+      rust_error_name: "{{ prompts.rust_error_name | upper_camel_case }}"
     template_file: templates/{{ prompts.error_name }}.rs.tpl
