feat: support target override on run-generator action

--- a/generators/crate/generator.omni.yaml
+++ b/generators/crate/generator.omni.yaml
@@ -54,5 +54,7 @@ actions:
   - if: "{{ prompts.add_error_type }}"
     type: run-generator
     generator: rust-error
+    targets:
+      root: ./src
     prompt_values:
       forward: all
