--- a/crates/omni_generator/project.omni.yaml
+++ b/crates/omni_generator/project.omni.yaml
@@ -11,6 +11,7 @@ dependencies:
   - omni_configuration_discovery
   - omni_discovery
   - omni_tera
+  - omni_types
   - dir_walker
   - system_traits
   - maps
