feat: implement run-command action

--- a/crates/omni_generator/Cargo.toml
+++ b/crates/omni_generator/Cargo.toml
@@ -50,3 +50,4 @@ omni_tera = { workspace = true }
 enum-map = { workspace = true }
 omni_types = { workspace = true }
 regex = { workspace = true }
+omni_process = { workspace = true }
