--- a/crates/omni_utils/Cargo.toml
+++ b/crates/omni_utils/Cargo.toml
@@ -23,3 +23,4 @@ system_traits = { workspace = true, features = [
     "memory-async",
 ] }
 bs58 = { workspace = true }
+maps = { workspace = true }
