--- a/crates/omni_utils/project.omni.yaml
+++ b/crates/omni_utils/project.omni.yaml
@@ -1,5 +1,9 @@
 # yaml-language-server: $schema=https://raw.githubusercontent.com/omni-oss/omni/refs/heads/json-schemas/project-latest.json
 name: omni_utils
 
+dependencies:
+  - trace
+  - maps
+
 extends:
   - "@workspace/omni/presets/rust-lib.omni.yaml"
