--- a/crates/omni_generator_configurations/Cargo.toml
+++ b/crates/omni_generator_configurations/Cargo.toml
@@ -7,7 +7,7 @@ repository.workspace = true
 
 [features]
 default = ["enable-tracing"]
-enable-tracing = ["trace/enabled"]
+enable-tracing = ["trace/enabled", "dep:tracing"]
 
 [dependencies]
 serde = { workspace = true }
@@ -18,7 +18,7 @@ schemars = { workspace = true }
 derive_more = { workspace = true }
 thiserror = { workspace = true }
 eyre = { workspace = true }
-trace = { workspace = true, optional = true }
+trace = { workspace = true }
 tracing = { workspace = true, optional = true }
 strum = { workspace = true }
 derive-new = { workspace = true }
@@ -28,7 +28,6 @@ omni_core = { workspace = true }
 omni_expressions = { workspace = true }
 config_utils = { workspace = true }
 omni_types = { workspace = true }
-js_runtime = { workspace = true }
 garde = { workspace = true }
 system_traits = { workspace = true }
 lazy-regex = { workspace = true }
