refactor: error types

--- a/crates/bridge_rpc/Cargo.toml
+++ b/crates/bridge_rpc/Cargo.toml
@@ -29,6 +29,7 @@ defer = { workspace = true }
 strum = { workspace = true }
 bytes = { workspace = true }
 byteorder = { workspace = true }
+derive-new = { workspace = true }
 
 [dev-dependencies]
 mockall = { workspace = true }
