--- a/Cargo.toml
+++ b/Cargo.toml
@@ -221,6 +221,7 @@ git2 = { version = "^0.20.2" }
 requestty = { version = "^0.6.1", features = ["crossterm", "smallvec", "macros"] }
 value-bag = { version = "^1.11.1", features = ["serde", "error", "seq", "owned"] }
 serde_validate = { path = "./crates/serde_validate" }
+serde_repr = { version = "^0.1.20" }
 heck = { version = "^0.5.0" }
 # nom = { version = "^8.0.0" }
 
