--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,6 +23,7 @@ sys_traits = { version = "^0.1.18", features = ["real"] }
 system_traits = { path = "./crates/system_traits" }
 async-trait = { version = "^0.1.89" }
 serde_json = { version = "^1.0.145" }
+serde_bytes = { version = "^0.11.19" }
 trace = { path = "./crates/trace" }
 tracing = { version = "^0.1.41" }
 tracing-core = { version = "^0.1.34" }
