feat(bridge_rpc_router): implement router

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -142,6 +142,7 @@ omni_utils = { path = "./crates/omni_utils" }
 omni_configurations = { path = "./crates/omni_configurations" }
 omni_context = { path = "./crates/omni_context" }
 omni_task_executor = { path = "./crates/omni_task_executor" }
+bridge_rpc_router = { path = "crates/bridge_rpc_router" }
 # @anchor:new-crate
 tracing-futures = { version = "^0.2.5", features = ["tokio"] }
 pathdiff = { version = "^0.2.3" }
