--- a/packages/bridge-rpc/package.json
+++ b/packages/bridge-rpc/package.json
@@ -5,15 +5,16 @@
         ".": "./src/index.ts"
     },
     "dependencies": {
-        "@msgpack/msgpack": "^3.1.2",
-        "zod": "^4.1.12"
+        "@msgpack/msgpack": "^3.1.3",
+        "zod": "^4.3.5",
+        "async-mutex": "^0.5.0"
     },
     "devDependencies": {
         "@omni-oss/tsconfig": "workspace:*",
         "@omni-oss/vite-config": "workspace:*",
-        "vite": "^7.2.2",
-        "vitest": "^4.0.10",
+        "vite": "^7.3.1",
+        "vitest": "^4.0.17",
         "typescript": "^5.9.3",
-        "@types/node": "24.10.1"
+        "@types/node": "25.0.10"
     }
 }
