--- a/packages/bridge-rpc-router/package.json
+++ b/packages/bridge-rpc-router/package.json
@@ -1,11 +1,11 @@
 {
-    "name": "@omni-oss/system-interface",
+    "name": "@omni-oss/bridge-rpc-router",
     "version": "0.0.0-semantically-released",
     "exports": {
         ".": "./src/index.ts"
     },
     "dependencies": {
-        "memfs": "^4.56.10"
+        "@omni-oss/bridge-rpc": "workspace:*"
     },
     "devDependencies": {
         "@omni-oss/tsconfig": "workspace:*",
@@ -13,8 +13,6 @@
         "vite": "^7.3.1",
         "vitest": "^4.0.18",
         "typescript": "^5.9.3",
-        "@types/node": "25.0.10",
-        "@types/bun": "^1.3.6",
-        "@types/deno": "^2.5.0"
+        "@types/node": "25.0.10"
     }
 }
