--- a/packages/bridge-rpc/package.json
+++ b/packages/bridge-rpc/package.json
@@ -2,18 +2,21 @@
     "name": "@omni-oss/bridge-rpc",
     "version": "0.0.0-semantically-released",
     "exports": {
-        ".": "./src/index.ts"
+        ".": "./src/index.ts",
+        "./frame": "./src/bridge/frame.ts",
+        "./client": "./src/bridge/client/index.ts",
+        "./server": "./src/bridge/server/index.ts"
     },
     "dependencies": {
         "@msgpack/msgpack": "^3.1.3",
-        "zod": "^4.3.5",
+        "zod": "^4.3.6",
         "async-mutex": "^0.5.0"
     },
     "devDependencies": {
         "@omni-oss/tsconfig": "workspace:*",
         "@omni-oss/vite-config": "workspace:*",
         "vite": "^7.3.1",
-        "vitest": "^4.0.17",
+        "vitest": "^4.0.18",
         "typescript": "^5.9.3",
         "@types/node": "25.0.10"
     }
