--- a/packages/async-utils/package.json
+++ b/packages/async-utils/package.json
@@ -1,19 +1,16 @@
 {
-    "name": "@omni-oss/bridge-rpc-router",
+    "name": "@omni-oss/async-utils",
     "version": "0.0.0-semantically-released",
     "exports": {
         ".": "./src/index.ts"
     },
-    "dependencies": {
-        "@omni-oss/channels": "workspace:*",
-        "@omni-oss/bridge-rpc": "workspace:*"
-    },
+    "dependencies": {},
     "devDependencies": {
         "@omni-oss/tsconfig": "workspace:*",
         "@omni-oss/vite-config": "workspace:*",
-        "vite": "^7.3.1",
-        "vitest": "^4.0.18",
+        "vite": "^7.2.2",
+        "vitest": "^4.0.8",
         "typescript": "^5.9.3",
-        "@types/node": "25.0.10"
+        "@types/node": "24.10.1"
     }
 }
