--- a/packages/bridge-rpc/package.json
+++ b/packages/bridge-rpc/package.json
@@ -8,6 +8,8 @@
         "./server": "./src/bridge/server/index.ts"
     },
     "dependencies": {
+        "@omni-oss/async-utils": "workspace:*",
+        "@omni-oss/channels": "workspace:*",
         "@msgpack/msgpack": "^3.1.3",
         "zod": "^4.3.6",
         "async-mutex": "^0.5.0"
