chore: refactor vitest configs

--- a/packages/async-utils/package.json
+++ b/packages/async-utils/package.json
@@ -8,6 +8,7 @@
     "devDependencies": {
         "@omni-oss/tsconfig": "workspace:*",
         "@omni-oss/vite-config": "workspace:*",
+        "@omni-oss/vitest-config": "workspace:*",
         "vite": "^7.2.2",
         "vitest": "^4.0.8",
         "typescript": "^5.9.3",
